# sar

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/core/: mod.rs
tests/: README.md  integration_test.rs
tests/common/: mod.rs
tests/resources/: expected-1.txt  expected-2.txt  expected-22.json  expected-32.js  original-1.txt  original-2.json  original-2.txt  original-3.js
tests/test_resources/: expected-21.json  expected-31.js
