[package]
name = "sar"
version = "1.0.0"
edition = "2021"
description = "A simple search and replace (sar) tool for UTF-8 encoded text files"
author = "Dony Thomas <dony.thomas7@gmail.com>"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
clap = { version = "3", features = ["derive"] }
dialoguer = "0"